--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -32,12 +32,10 @@ jobs:
           matrix:
             # linux/amd64ならubuntu-24.04で、
             # linux/arm64ならubuntu-24.04-arm64でビルドを行う
-            platform: [linux/amd64, linux/arm64]
-            runner: [ubuntu-24.04, ubuntu-24.04-arm64]
-            ignore:
-              - platform: linux/arm64
-                runner: ubuntu-24.04
+            include:
               - platform: linux/amd64
+                runner: ubuntu-24.04
+              - platform: linux/arm64
                 runner: ubuntu-24.04-arm64
         runs-on: ${{ matrix.runner }}
         name: イメージビルド(${{ matrix.platform }})
