runner名のミスに対応

--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -42,7 +42,7 @@ jobs:
               - platform: linux/amd64
                 runner: ubuntu-24.04
               - platform: linux/arm64
-                runner: ubuntu-24.04-arm64
+                runner: ubuntu-24.04-arm
         runs-on: ${{ matrix.runner }}
         name: イメージビルド(${{ matrix.platform }})
         needs: make_serial
