--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -54,7 +54,7 @@ jobs:
                 runner: ubuntu-24.04
                 tag_suffix: amd64
               - platform: linux/arm64
-                runner: ubuntu-24.04-arm
+                runner: ${{ needs.test_act.outputs.act == 'true' && 'ubuntu-24.04' || 'ubuntu-24.04-arm' }}
                 tag_suffix: arm64
         runs-on: ${{ matrix.runner }}
         name: イメージビルド(${{ matrix.platform }})
