--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
   workflow_dispatch:
+  # 1週間に1回再ビルド
+  schedule:
+    - cron: '0 12 * * 0' # 毎週日曜日の12:00(UTC)に実行
 
 
 # GHCRへプッシュできるよう権限を設定
